force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_Avatar_URL__c</fullName>
    <defaultValue>&quot;plaunch__avatar_url__c&quot;</defaultValue>
    <label>Account Avatar URL</label>
    <length>60</length>
    <type>Text</type>
</CustomField>