force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_Billing_City__c</fullName>
    <defaultValue>&quot;BillingCity&quot;</defaultValue>
    <label>Account Billing City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>