force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_Billing_Country__c</fullName>
    <defaultValue>&quot;BillingCountry&quot;</defaultValue>
    <label>Account Billing Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>