force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_Billing_State__c</fullName>
    <defaultValue>&quot;BillingState&quot;</defaultValue>
    <label>Account Billing State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>