force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_Billing_State_Code__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_Billing_State_Code__c</fullName>
    <defaultValue>&apos;BillingStateCode&apos;</defaultValue>
    <label>Account Billing State Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>