force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_Brand_Name__c</fullName>
    <defaultValue>&quot;plaunch__Brand_Name__c&quot;</defaultValue>
    <label>Account Brand Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>