force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_DunsNumber__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_DunsNumber__c</fullName>
    <defaultValue>&quot;DunsNumber&quot;</defaultValue>
    <label>Account D-U-N-S Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>