force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_Email__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_Email__c</fullName>
    <defaultValue>&apos;Email__c&apos;</defaultValue>
    <label>Account Email</label>
    <length>60</length>
    <type>Text</type>
</CustomField>