force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_LinkedInNumericalId__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_LinkedInNumericalId__c</fullName>
    <defaultValue>&quot;plaunch__LinkedInNumericalId__c&quot;</defaultValue>
    <label>Account LinkedIn™ Numerical Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>