force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_SIC__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_SIC__c</fullName>
    <defaultValue>&quot;Sic&quot;</defaultValue>
    <label>Account SIC</label>
    <length>60</length>
    <type>Text</type>
</CustomField>