force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_Website__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_Website__c</fullName>
    <defaultValue>&quot;Website&quot;</defaultValue>
    <label>Account Website</label>
    <length>60</length>
    <type>Text</type>
</CustomField>