force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Account_YearStarted__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Account_YearStarted__c</fullName>
    <defaultValue>&quot;YearStarted&quot;</defaultValue>
    <label>Account YearStarted</label>
    <length>60</length>
    <type>Text</type>
</CustomField>