force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Company_Avatar_URL__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Company_Avatar_URL__c</fullName>
    <defaultValue>&quot;plaunch__Company_Avatar_URL__c&quot;</defaultValue>
    <label>Company Avatar URL</label>
    <length>60</length>
    <type>Text</type>
</CustomField>