force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_Email__c</fullName>
    <defaultValue>&apos;Email&apos;</defaultValue>
    <label>Contact Email</label>
    <length>60</length>
    <type>Text</type>
</CustomField>