force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Contact_Inactive__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_Inactive__c</fullName>
    <description>Checkbox custom field to indicate if the contact is inactive e.g left company</description>
    <label>Contact Inactive</label>
    <length>60</length>
    <type>Text</type>
</CustomField>