force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Contact_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_LinkedIn__c</fullName>
    <defaultValue>&quot;plaunch__LinkedIn__c&quot;</defaultValue>
    <label>Contact LinkedIn™</label>
    <length>60</length>
    <type>Text</type>
</CustomField>