force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Contact_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_Mailing_City__c</fullName>
    <defaultValue>&quot;MailingCity&quot;</defaultValue>
    <label>Contact Mailing City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>