force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Contact_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_Mailing_Country__c</fullName>
    <defaultValue>&apos;MailingCountry&apos;</defaultValue>
    <label>Contact Mailing Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>