force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Contact_Mailing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_Mailing_Country_Code__c</fullName>
    <defaultValue>&apos;MailingCountryCode&apos;</defaultValue>
    <label>Contact Mailing Country Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>