force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Contact_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_Mailing_State__c</fullName>
    <defaultValue>&apos;MailingState&apos;</defaultValue>
    <label>Contact Mailing State</label>
    <length>60</length>
    <type>Text</type>
</CustomField>