force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Contact_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_Mailing_Street__c</fullName>
    <defaultValue>&apos;MailingStreet&apos;</defaultValue>
    <label>Contact Mailing Street</label>
    <type>TextArea</type>
</CustomField>