force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Contact_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_Postal_Code__c</fullName>
    <defaultValue>&apos;MailingPostalCode&apos;</defaultValue>
    <label>Contact Postal Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>