force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_Title__c</fullName>
    <defaultValue>&quot;Title&quot;</defaultValue>
    <label>Contact Title</label>
    <length>60</length>
    <type>Text</type>
</CustomField>