force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Contact_Xing__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Contact_Xing__c</fullName>
    <defaultValue>&quot;plaunch__Xing__c&quot;</defaultValue>
    <label>Contact Xing</label>
    <length>60</length>
    <type>Text</type>
</CustomField>