force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_Billing_State_Code__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_Billing_State_Code__c</fullName>
    <defaultValue>&apos;StateCode&apos;</defaultValue>
    <label>Lead Billing State Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>