force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_City__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_City__c</fullName>
    <defaultValue>&quot;City&quot;</defaultValue>
    <label>Lead City</label>
    <length>60</length>
    <type>Text</type>
</CustomField>