force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_CompanyLinkedInNumericalId__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_CompanyLinkedInNumericalId__c</fullName>
    <defaultValue>&quot;plaunch__CompanyLinkedInNumericalId__c&quot;</defaultValue>
    <label>Lead Company LinkedIn™ Numerical Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>