force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_Country__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_Country__c</fullName>
    <defaultValue>&quot;Country&quot;</defaultValue>
    <label>Lead Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>