force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_Description__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_Description__c</fullName>
    <defaultValue>&quot;Description&quot;</defaultValue>
    <label>Lead Description</label>
    <length>60</length>
    <type>Text</type>
</CustomField>