force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_DunsNumber__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_DunsNumber__c</fullName>
    <defaultValue>&quot;CompanyDunsNumber&quot;</defaultValue>
    <label>Lead D-U-N-S Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>