force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_HitHorizons_ID__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_HitHorizons_ID__c</fullName>
    <defaultValue>&quot;plaunch__HitHorizonsID__c&quot;</defaultValue>
    <label>Lead HitHorizons ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>