force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_Industry__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_Industry__c</fullName>
    <defaultValue>&quot;Industry&quot;</defaultValue>
    <label>Lead Industry</label>
    <length>60</length>
    <type>Text</type>
</CustomField>