force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_MobilePhone__c</fullName>
    <defaultValue>&quot;MobilePhone&quot;</defaultValue>
    <label>Lead Mobile Phone</label>
    <length>60</length>
    <type>Text</type>
</CustomField>