force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_Phone__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_Phone__c</fullName>
    <defaultValue>&quot;Phone&quot;</defaultValue>
    <label>Lead Phone</label>
    <length>60</length>
    <type>Text</type>
</CustomField>