force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_Postal_Code__c</fullName>
    <defaultValue>&quot;PostalCode&quot;</defaultValue>
    <label>Lead Postal Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>