force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_Salutation__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_Salutation__c</fullName>
    <defaultValue>&quot;Salutation&quot;</defaultValue>
    <label>Lead Salutation</label>
    <length>60</length>
    <type>Text</type>
</CustomField>