force-app/main/default/objects/plaunch__CustomFieldMapping__c/fields/plaunch__Lead_SIC__c.field-meta.xml
<CustomField>
    <fullName>plaunch__Lead_SIC__c</fullName>
    <label>Lead SIC</label>
    <length>60</length>
    <type>Text</type>
</CustomField>